Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.6.0-rc
-
None
Description
Creator creates CMake bases projects whithout problems when no CMakeLists.txt.user exists.
But adding a new kit (which works when used as first kit) gives an error about missing compiler:
CMake Error: your CXX compiler: "CMAKE_CXX_COMPILER-NOTFOUND" was not found.
Please set CMAKE_CXX_COMPILER to a valid compiler path or name.
Looks like the environment related to the kit is not set.