CMake: Use correct environment for new kits

Task-number: QTCREATORBUG-8073

Change-Id: I9c262fd553fa1af0e8de4900f465fe45aa8bbf78
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>